--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,31 @@
+x11proto-render (2:0.11.1-2) unstable; urgency=low
+
+  * Mark x11proto-render-dev Multi-Arch: foreign.
+  * Install .pc file to /usr/share/pkgconfig instead of
+    /usr/lib/pkgconfig
+
+ -- Steve Langasek <vorlon@debian.org>  Sat, 02 Jul 2011 01:10:05 +0100
+
+x11proto-render (2:0.11.1-1) unstable; urgency=low
+
+  [ Julien Cristau ]
+  * Install the protocol spec in the package.
+  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
+    good reason.  Thanks, Colin Watson!
+  * Remove myself from Uploaders
+
+  [ Robert Hooker ]
+  * New upstream release.
+  * Bump xutils-dev build dep to 1:7.5~1 for util-macros 1.3.
+
+  [ Cyril Brulebois ]
+  * Add pkg-config build-dep.
+  * Switch from --list-missing to --fail-missing for additional safety.
+  * No longer pass --disable-shared, this option is gone.
+  * Add myself to Uploaders.
+
+ -- Cyril Brulebois <kibi@debian.org>  Wed, 03 Nov 2010 02:02:59 +0100
+
 x11proto-render (2:0.11-1) unstable; urgency=low
 
   * Run autoreconf at build time.
